--- a/books/Views/SettingsHeader.xib
+++ b/books/Views/SettingsHeader.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,21 +13,21 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SettingsHeader" customModule="Reading_List" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="377" height="148"/>
+            <rect key="frame" x="0.0" y="0.0" width="298" height="148"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fmK-4u-5xR">
-                    <rect key="frame" x="54.5" y="0.0" width="268.5" height="148"/>
+                    <rect key="frame" x="23" y="0.0" width="252.5" height="148"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AppIcon_Rounded" translatesAutoresizingMaskIntoConstraints="NO" id="aaK-CP-7w3">
-                            <rect key="frame" x="16" y="34" width="80" height="80"/>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="About" translatesAutoresizingMaskIntoConstraints="NO" id="aaK-CP-7w3">
+                            <rect key="frame" x="0.0" y="34" width="80" height="80"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="80" id="SOP-AL-GdQ"/>
                                 <constraint firstAttribute="width" constant="80" id="hhN-Ov-C5h"/>
                             </constraints>
                         </imageView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QBr-gF-Sep">
-                            <rect key="frame" x="112" y="42.5" width="156.5" height="63"/>
+                            <rect key="frame" x="96" y="42.5" width="156.5" height="63"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reading List" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eMI-zZ-hAK">
                                     <rect key="frame" x="8" y="8" width="98.5" height="20.5"/>
@@ -64,27 +64,25 @@
                         <constraint firstItem="QBr-gF-Sep" firstAttribute="leading" secondItem="aaK-CP-7w3" secondAttribute="trailing" constant="16" id="JZ1-EC-HO6"/>
                         <constraint firstItem="QBr-gF-Sep" firstAttribute="centerY" secondItem="fmK-4u-5xR" secondAttribute="centerY" id="JeK-ua-tb0"/>
                         <constraint firstAttribute="trailing" secondItem="QBr-gF-Sep" secondAttribute="trailing" id="PPc-Aj-tFH"/>
-                        <constraint firstItem="aaK-CP-7w3" firstAttribute="leading" secondItem="fmK-4u-5xR" secondAttribute="leading" constant="16" id="ZrQ-Ik-OiA"/>
+                        <constraint firstItem="aaK-CP-7w3" firstAttribute="leading" secondItem="fmK-4u-5xR" secondAttribute="leading" id="ZrQ-Ik-OiA"/>
+                        <constraint firstAttribute="height" constant="148" id="cWO-N9-fca"/>
                         <constraint firstItem="aaK-CP-7w3" firstAttribute="centerY" secondItem="fmK-4u-5xR" secondAttribute="centerY" id="hAe-SW-bqw"/>
-                        <constraint firstItem="aaK-CP-7w3" firstAttribute="centerY" secondItem="fmK-4u-5xR" secondAttribute="centerY" id="qlI-jl-K6J"/>
                     </constraints>
                 </view>
             </subviews>
             <constraints>
                 <constraint firstItem="fmK-4u-5xR" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="3F5-u2-XYN"/>
-                <constraint firstItem="fmK-4u-5xR" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="Exq-sm-VaA"/>
-                <constraint firstItem="fmK-4u-5xR" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="MQs-FF-OxB"/>
-                <constraint firstItem="fmK-4u-5xR" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="VyO-5I-lhG"/>
+                <constraint firstItem="fmK-4u-5xR" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="pFp-EZ-Rs3"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
                 <outlet property="versionNumber" destination="HSb-Hx-2qE" id="0Xv-Xm-cly"/>
             </connections>
-            <point key="canvasLocation" x="42.5" y="-616"/>
+            <point key="canvasLocation" x="3" y="-616"/>
         </view>
     </objects>
     <resources>
-        <image name="AppIcon_Rounded" width="180" height="180"/>
+        <image name="About" width="29" height="29"/>
     </resources>
 </document>
